--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+    <script
+        src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+        crossorigin="anonymous"></script>
     <title>Pizza Delivery</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="utils.js"></script>
+    <script src="../javascripts/utils.js"></script>
 </head>
 <body class="container">
 <header>
@@ -18,7 +21,7 @@
     </div>
 </header>
 
-<form class="form-horizontal" method="post" action="/order">
+<form class="form-horizontal" method="post" action="/users/order">
     <br>
     <fieldset class="border p-2">
         <legend class="w-auto">Pizza Details</legend>
@@ -70,32 +73,6 @@
             <input type="number" id="quantity" name="quantity" required>
         </div>
     </fieldset>
-
-    <div>
-        <br>
-        <fieldset class="border p-2">
-            <legend class="w-auto">Quick Contact</legend>
-
-            <div class="form-group">
-                <label class="control-label col-sm-1 center" for="name">Name</label>
-                <div class="col-sm-6">
-                    <input minlength="3" type="text" class="form-control" id="name" placeholder="Enter your name" name="name">
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="control-label col-sm-1 center" for="phone">Phone</label>
-                <div class="col-sm-6">
-                    <input minlength="10" maxlength="10" type="tel" class="form-control" id="phone" placeholder="6XXXXXXXXX" name="phone">
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="control-label col-sm-1 center" for="address">Address</label>
-                <div class="col-sm-6">
-                    <input type="text" class="form-control" id="address" placeholder="5288 Burke Avenue, V5L 2N8" name="address">
-                </div>
-            </div>
-        </fieldset>
-    </div>
     <br>
     <div class="form-group">
         <div class="text-center">
