--- a/views/register.ejs
+++ b/views/register.ejs
@@ -29,6 +29,28 @@
           />
         </div>
         <div class="form-group">
+          <label for="address">Address</label>
+          <input
+            type="text"
+            id="address"
+            name="address"
+            class="form-control"
+            placeholder="Enter Address"
+            value="<%= typeof address != 'undefined' ? address : '' %>"
+          />
+        </div>
+        <div class="form-group">
+          <label for="phone">Phone Number</label>
+          <input
+            type="text"
+            id="phone"
+            name="phone"
+            class="form-control"
+            placeholder="Enter Address"
+            value="<%= typeof phone != 'undefined' ? phone : '' %>"
+          />
+        </div>
+        <div class="form-group">
           <label for="password">Password</label>
           <input
             type="password"
